# app2

./: README.md  app.py  package.json  pyproject.toml  pyrightconfig.json
app2/: __init__.py  app2.py
tests/: test_app2.py
