[tool.poetry]
name = "app2"
version = "0.1.0"
description = " "
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffreemt/app2"
include = ["LICENSE",]

[tool.poetry.dependencies]
python = "^3.7"
# python = "^3.6.7"
logzero = "^1.7.0"
streamlit = "^0.84.1"
Morfessor = "~2.0.6"
PyICU = "~2.6"
pycld2 = "~0.41"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
pep257 = "^0.7.0"
tbump = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
